<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ARTour</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="naslov_opstina">Opština Milići</string>
    <string name="naslov_aplikacija">ARTour</string>
    <string name="naslov_prava">Autorska prava</string>
    <string name="podnaslov_opstina">Kulturno naslijeđe. Prirodna Ljepota</string>
    <string name="podnaslov_aplikacija">Turistički vodič opštine Milići</string>
    <string name="podnaslov_prava">i uslovi korišćenja</string>
    <string name="opstina_tekst">
        Opština Milići nalazi se u istočnom dijelu Republike Srpske i Bosne i Hercegovine i centralni je dio regije Birač. \n\nKroz opštinu prolazi najznačajnija drumska saobraćajnica istočnog dijela RS i BiH, magistralni put M-19: Sarajevo - Sokolac - Vlasenica - Milići - Zvornik - Loznica, koja povezuje centralnu BiH i Srbiju. \nU južnom dijelu opštine je magistralni put R-452: Milići - Derventa - Zeleni Jadar. \n\nPodručje opštine Milići graniči se sa šest opština, na sjeveru opština Zvornik, na zapadu opština Vlasenica, na sjeveroistoku i istoku opštine Bratunac i Srebrenica, na jugoistoku i jugu sa opštinama Han Pijesak i Rogatica. \nOpštinsko područje obuhvata površinu od 278,86 km2, nadmorske visine od 165 m (ušće Jadra u Drinjaču) do 1.490 m (planina Javor, vrh Mehovac, u ataru naseljenog mjesta Đile). \n\nReljef opštine čini više fizičko geografskih cjelina - doline Studenog Jadra, Zelenog Jadra i Jadra; kompozitna dolina Drinjače; planina Udrč, sa visokim i srednje visokim pobrđem na sjeverozapadu, planinski masiv Javor (Devetak, planina Birač) i jugu opštine, kao niska planina Ludmer i njeni obronci na istoku opštine. \n\nOpština raspolaže obiljem vodotokova: većih, kao što su - Zeleni Jadar (18,7 km), Studeni Jadar (8,2 km), Jadar (15,1 km), Drinjača (11,5 km), i manjih - Tabana, Lukavica, Vaganjski potok, Štedrić, Bukovička rijeka, Koprivski potok, Dragošnica, Palučak, Dubnica, Radinja, Skugrićka rijeka, Cerski potok, Slanska rijeka i određen broj manjih bujičnih vodotokova. \n\nPored vode, područje opštine obiluje i značajnim šumskim bogatstvom (bukva, jela, smrča…), površine oko 12.366 ha, kojim gazduje ŠG Milići. \nVeći dio opštine (sjeverni i centralni) ima umjereno kontinentalnu klimu sa oštrim zimama i toplim ljetima. \n\nSa povećanjem nadmorske visine na jugu, jugoistoku i istoku klima prelazi u predplaninsku, umjereno kontinentalnu, dok na krajnjem jugozapadu i području planine Javor (Devetak) vlada planinska klima sa svježim ljetima i hladnim zimama, sa obilnim snježnim padavinama.
    </string>
    <string name="aplikacija_tekst">
        ARTour: Turistički Vodič opštine Milići\n\nARTour je mobilna Android aplikacija koja pruža inovativno iskustvo istraživanja bogate kulturne, prirodne i nacionalne baštine opštine Milići. \nAplikaciju su razvili Vladimir Erić i Sergej Kaldesić, članovi razvojnog tima, koristeći Android Studio Giraffe radno okruženje. \nSvojim korisnicima nudi jedinstveno iskustvo istraživanja raznovrsnih atrakcija ovog područja.\n\n\nFunkcionalnosti Aplikacije\n\nDetaljne Informacije i Ilustracije:\nARTour pruža korisnicima detaljne informacije o znamenitostima opštine Milići, uz ilustracije i drugi multimedijalni sadržaj. \nCilj je podstaći korisnike na temeljnije istraživanje kroz pouzdane izvore.\n\nGoogle Maps Integracija:\nAplikacija uključuje Google Maps API, omogućavajući precizno vođenje korisnika do destinacija unutar opštine Milići. \nInteraktivna mapa sadrži oznake koje ukazuju na potencijalno zanimljiva i korisna mesta.\n\nInfo Centar:\nPruža korisnicima važne informacije iz lokalne perspektive na efikasniji, brži i jednostavniji način nego ikada ranije.\n\nProširena Stvarnost (AR):\nKorišćenjem savremenih tehnologija kao što su Machine Learning, Augmented Reality i Image Classification, ARTour integriše ove elemente kako bi pružila jedinstveno iskustvo korisnicima. \nModel za učenje i treniranje unapređuje prikaz znamenitosti kroz kameru uređaja.\n\n\nTehnički Aspekti\n\nProgramski Jezik:\nAplikacija je u potpunosti napisana u programskom jeziku Java.\n\nKorisnički Interfejs:\nRazvojni tim, sastavljen od Vladimira Erića i Sergeja Kaldesića, dizajnirao je korisnički interfejs prema najvišim standardima Google-a i Android-a, prateći savremene trendove u dizajnu mobilnih aplikacija.\n\nUsaglašenost sa Standardima:\nARTour zadovoljava sve uslove Android platforme, uključujući Android Market Developer Distribution Agreement, i poštuje opšte uslove M:tel app takmičenja.\n\nKvalitet Korisničkog Iskustva:\nKroz tri faze testiranja i unapređenja, kvalitet korisničkog iskustva dostiže najviši nivo. \nAplikacija pruža pouzdane informacije korisnicima brzo i efikasno, uz jasne gestove i kontrole.\n\n\nARTour je ne samo informativan vodič već i interaktivno iskustvo, postavljajući se kao vrhunski turistički resurs za istraživanje opštine Milići, povezujući prošlost sa inovativnom budućnošću!\n\n\n\nReference\n\nOpština Milići. (2024). Opština Milići. [Online] Dostupno na: https://www.opstinamilici.org\n\"Naših 25 godina - Opština Milići\", Milići 2017 - Monografija opštine Milići\n\nFlaticon. (n.d.). Wind Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/wind - Sun icon created by Freepik - Flaticon\nFlaticon. (n.d.). Rain Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/rain - Rain icon created by Freepik - Flaticon\nFlaticon. (n.d.). Snow Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/snow - Snow icon created by Freepik - Flaticon\nFlaticon. (n.d.). Storm Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/storn - Storm icon created by Freepik - Flaticon\nFlaticon. (n.d.). Hurricane Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/hurricane - Hurricane icon created by Freepik - Flaticon\nFlaticon. (n.d.). Fog Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/fog - Fog icon created by Freepik - Flaticon\nFlaticon. (n.d.). Drizzle Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/drizzle - Drizzle icon created by Freepik - Flaticon\nFlaticon. (n.d.). Clouds Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/clouds - Clouds icon created by Freepik - Flaticon\nFlaticon. (n.d.). Circle Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/circle - Circle icon created by Freepik - Flaticon\nFlaticon. (n.d.). Loading Icon. Flaticon. [Online] Dostupno na: https://www.flaticon.com/free-icons/loading - Loading icon created by Rahul Kaklotar - Flaticon\n\nhttps://openweathermap.org/api\nhttps://developers.google.com/maps\nhttps://www.tensorflow.org/lite\nhttps://teachablemachine.withgoogle.com/\nhttps://www.researchgate.net/publication/348035879_Prirodne_populacije_Panciceve_omorike_u_Republici_Srpskoj_Bosna_i_Hercegovina
    </string>
    <string name="prava_tekst">
        Uslovi Korišćenja (Terms of Use)\n\n\nPrihvatanje Uslova:\nKorišćenjem aplikacije ARTour, korisnik automatski prihvata sve uslove korišćenja navedene u ovom dokumentu.\n\nLicenca:\nARTour je zaštićen autorskim pravima i pruža ograničenu, neekskluzivnu licencu za korišćenje. Korisnici ne smiju distribuirati, kopirati ili mijenjati sadržaj aplikacije bez izričitog pismenog odobrenja.\nOdređeni sadržaj potiče iz javnih izvora, dostupni su i dozvoljeni za korišćenje od strane trećih lica. Potrebno je kontaktirati vlasnike aplikacije za dodatne informacije o sadržaju koji je dozvoljen za korišćenje svim licima.\n\nOdgovornost Korisnika:\nKorisnici su odgovorni za tačnost informacija koje unesu u aplikaciju. Razvojni tim nije odgovoran za eventualne greške ili štete nastale kao rezultat netačnih informacija.\n\nOgraničenja Korišćenja:\nKorisnici ne smiju vršiti neovlašćeni pristup ili pokušavati hakovanje aplikacije. Zabranjeno je neetičko korišćenje aplikacije ili narušavanje ispravnog funkcionisanja.\n\nOdgovornost Razvojnog Tima:\nRazvojni tim ne snosi odgovornost za eventualne gubitke ili štete proizašle iz pogrešnog korišćenja ili nemogućnosti korišćenja aplikacije.\n\n\nAutorska Prava (Copyright)\n\nVlasništvo:\nAplikacija ARTour i svi pripadajući sadržaji su vlasništvo razvojnog tima. Autorska prava obuhvataju dizajn, kod, orignalni tekst koji ne pripada javno dostupnom sadržaju, grafike, multimedijalni sadržaj i sve ostale komponente aplikacije.\n\nZabrana Kopiranja i Distribucije:\nKopiranje, distribuisanje ili reprodukcija bilo kojeg dijela aplikacije bez izričitog pismenog odobrenja razvojnog tima je zabranjeno. U trenutku objave aplikacije na javno dostupne digitalne platforme (poput "Google Play Store") ni jedno lice ne posjeduje ovo pravo (pravo na reprodukciju, distribuisanje i kopiranje). Svako lice koje dobije pravo biće imenovano u aplikaciji kao lice sa pravom na pomenuto. Ukoliko se ime lica ne nalazi na listi lica sa dozvolom, to lice nema pravo reprodukcije, distribuisanja i/ili kopiranja. Ako lice koje nije imenovano na spisku krivično postupa protiv ovog uslova korišćenja i biće sproveden pravni postupak nad tim licem za kršenje autorskih prava i uslova korišćenja ove aplikacije.\n\nDozvoljene Radnje:\nKorisnicima je dozvoljeno koristiti aplikaciju u skladu sa uslovima korišćenja. Dozvoljava se dijeljenje informacija sa drugim korisnicima, ali uz poštovanje autorskih prava.\n\nAutorska Prava Trećih Strana:\nAplikacija može sadržavati elemente (npr. ikone) koje su vlasništvo trećih strana. Razvojni tim poštuje sva autorska prava drugih kreatora i koristi ih u skladu sa važećim licencama.\n\nZaštita Intelektualne Svojine:\nSvako neovlašćeno korišćenje intelektualne svojine povezane sa "ARTour" aplikacijom će biti gonjeno pravnim putem.\n\nDodatne Informacije: (trenutno nema dodatnih informacija) \n\nKontakt:\nZa dodatne informacije ili pitanja u vezi sa uslovima korišćenja i autorskim pravima, korisnici se mogu obratiti razvojnom timu ili lično njegovim članovima.\n\nIzmjene Uslova:\nRazvojni tim zadržava pravo izmjene uslova korišćenja i autorskih prava. Korisnici će biti obaviješteni o promjenama putem ažuriranja na internet platformi ili unutar same aplikacije. Redovno praćenje uslova korišćenja je odgovornost korisnika.\n\n© Sva prava zadržana 2024. | © Copyright 2024.\nARTour© - Turistički vodič opštine Milići
    </string>
    <string name="znamenitost_slika">Znamenitost slika</string>
    <string name="opis_znamenitosti">Opis znamenitosti</string>
    <string name="dugme_nazad">Nazad</string>
    <string name="opis_slike">TODO</string>
    <string name="artour">ARTour©</string>
    <string name="turisticki_vodic">TURISTIČKI VODIČ OPŠTINE MILIĆI</string>
    <string name="izdvojene_lokacije">IZDVOJENE LOKACIJE</string>
    <string name="lokacija">Lokacije</string>
    <string name="istrazite_opstinu">Istražite opštinu Milići</string>
</resources>