<!-- fragment_znamenitosti.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <!-- Defaultna slika, zameni je po potrebi -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView

            android:id="@+id/znamenitostImageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/znamenitost_slika"
            android:src="@drawable/ic_launcher_foreground" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/dugme_nazad"
            android:src="@drawable/baseline_keyboard_backspace_24"
            tools:ignore="MissingConstraints" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/znamenitostTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/opis_znamenitosti" />
    </ScrollView>

    <!-- Defaultni tekst, zameni ga po potrebi -->
</LinearLayout>
