<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragment_pozadina"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp">

    </com.google.android.material.bottomappbar.BottomAppBar>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="2dp"
            android:autoSizeMaxTextSize="12sp"
            android:fontFamily="@font/carossoft"
            android:text="@string/artour"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom|center|center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_bottom_navigation_bar"
            android:backgroundTint="@color/dark_theme"
            android:visibility="visible"
            android:contentDescription="@string/opis_slike" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom|center|center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_bottom_navigation_bar"
            android:backgroundTint="?attr/nav_meni"
            android:elevation="8dp"
            android:visibility="visible"
            android:contentDescription="@string/opis_slike" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_bottom_navigation_bar"
            android:visibility="visible"
            app:elevation="8dp"
            app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_menu" />
    </FrameLayout>


    <TextView
        android:id="@+id/naslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/turisticki_vodic"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationY="-260dp"
        android:visibility="gone"
        app:layout_anchor="@+id/frame_layout"
        app:layout_anchorGravity="center" />

    <TextView
        android:id="@+id/kartice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/izdvojene_lokacije"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationY="-180dp"
        android:visibility="gone"
        app:layout_anchor="@+id/frame_layout"
        app:layout_anchorGravity="center" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="410dp"
        android:layout_height="210dp"
        android:translationY="-50dp"
        android:visibility="gone"
        app:layout_anchor="@+id/frame_layout"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>