<!-- res/layout/fragment_destinations.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RecyclerView za prikaz destinacija -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/naslovna_linija"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Naslov"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:autoSizeMaxTextSize="24sp"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/carossoftbold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/lokacija"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Podnaslov"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="15sp"
                    android:fontFamily="@font/carossoft"
                    android:includeFontPadding="false"
                    android:text="@string/istrazite_opstinu"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="bottom"
                android:background="?android:attr/listDivider" />

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="30dp"
            android:scrollbars="vertical" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:visibility="visible"
        app:srcCompat="@drawable/gradient_rectangle"
        android:contentDescription="@string/opis_slike" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/white_rectangle"
        android:contentDescription="@string/opis_slike" />

</RelativeLayout>